:lipstick: :bug: Acertando text-align da seçao de duvidas no desktop

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -5,10 +5,6 @@ li a {
   }
 }
 
-h6 {
-  text-align: center;
-}
-
 .footer-content {
   margin-bottom: 20px;
 }
@@ -23,6 +19,7 @@ h6 {
     h6 {
       font-size: 0.8em;
       margin-bottom: 20px;
+      text-align: center;
     }
     li {
       text-align: center;
